tests/snapshots/run_wpt_conformance__onnx_isInfinite_float16_special_values.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "is_infinite.https.any.js",
    "isInfinite float16 special values",
    "onnx",
    "PASS",
)
