tests/snapshots/run_wpt_conformance__onnx_isInfinite_float32_2D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "is_infinite.https.any.js",
    "isInfinite float32 2D tensor",
    "onnx",
    "PASS",
)
